<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Gorosc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Goroscope"
    android:background="@color/fon">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="170dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/yyy"
        android:textSize="40sp"
        android:textColor="@color/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/user_field"
        android:layout_width="312dp"
        android:layout_height="62dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/black"
        android:ems="15"
        android:hint="@string/log"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/main_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_field"
        android:layout_marginHorizontal="130sp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/background"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/main_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_field" />

    <TextView
        android:id="@+id/result_info"
        android:layout_width="364dp"
        android:layout_height="224dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/montserrat"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn"
        app:layout_constraintVertical_bias="0.0">

    </TextView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/stars2"
        android:contentDescription="@string/goroscope_description"/>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/stars"
        android:contentDescription="@string/goroscope_description"/>

    <ImageButton
        android:id="@+id/GoBack2"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="60dp"
        android:background="@color/fon"
        android:contentDescription="@string/matrix_description"
        android:onClick="GoBack2"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/exit3" />

    <ImageView
        android:id="@+id/zodiacImage"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        android:layout_width="120sp"
        android:layout_height="120sp"
        android:contentDescription="@string/matrix_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerInside"/>

</androidx.constraintlayout.widget.ConstraintLayout>