<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Homeactivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="750dp"
        android:background="@color/strip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="80dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/logo2"
            android:textColor="@color/logo"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/logo1"
        android:textColor="@color/logo1"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="232dp"
        android:layout_height="270dp"
        android:contentDescription="@string/taro_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/gadalka" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="250dp"
        android:layout_height="169dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/taro_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/text1" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/Taro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:background="@color/background"
                android:contentDescription="@string/taro_description"
                android:onClick="GotoTaro"
                android:scaleType="centerCrop"
                android:src="@drawable/tarot" />

            <ImageButton
                android:id="@+id/Goroscope"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:background="@color/background"
                android:contentDescription="@string/goroscope_description"
                android:onClick="GoToGoroscope"
                android:scaleType="centerCrop"
                android:src="@drawable/gorosq" />

            <ImageButton
                android:id="@+id/Matrixs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:background="@color/background"
                android:contentDescription="@string/matrix_description"
                android:onClick="GoToMatrix"
                android:scaleType="centerCrop"
                android:src="@drawable/mmmmm" />

            <ImageButton
                android:id="@+id/Test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:background="@color/background"
                android:contentDescription="@string/matrix_description"
                android:onClick="GoToTest"
                android:scaleType="centerCrop"
                android:src="@drawable/test" />

        </LinearLayout>
    </HorizontalScrollView>

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="328dp"
        android:layout_marginBottom="16dp"
        android:background="@color/background"
        android:padding="12dp"
        android:scaleType="centerInside"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>