<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tarot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fon"
    tools:context=".TaroActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/fon"
        android:contentDescription="@string/matrix_description"
        android:onClick="GoBack"
        android:scaleType="fitStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/exit3" />

    <Button
        android:id="@+id/situation"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/background"
        android:text="@string/situation"
        app:layout_constraintBottom_toTopOf="@+id/day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/day"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:text="@string/day"
        android:backgroundTint="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/sms3"
        android:layout_width="390dp"
        android:layout_height="44dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="53dp"
        android:contentDescription="@string/matrix_description"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/generationImage1"
        android:layout_width="373dp"
        android:layout_height="291dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/matrix_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sms3" />

    <TextView
        android:id="@+id/imageDescription"
        android:layout_width="358dp"
        android:layout_height="125dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center"
        android:textColor="@color/background"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generationImage1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="61dp"
        android:layout_height="93dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/matrix_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/stars" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="53dp"
        android:layout_height="86dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/matrix_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/stars2" />

    <ImageButton
        android:id="@+id/resetButton"
        android:contentDescription="@string/matrix_description"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/reset"
        android:background="@color/fon"
        android:scaleType="fitStart"
        android:onClick="reset"/>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="390dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/matrix_description"
        android:scaleType="fitStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sms1" />

    <ImageView
        android:id="@+id/imageSituation2"
        android:layout_width="390dp"
        android:layout_height="44dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/matrix_description"
        android:scaleType="fitEnd"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/Situation3"
        android:layout_width="390dp"
        android:layout_height="44dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/matrix_description"
        android:scaleType="fitEnd"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

</androidx.constraintlayout.widget.ConstraintLayout>